[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/CharacterBase.gd" type="Script" id=1]

[node name="CharacterBase" type="Node2D"]
script = ExtResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]

[node name="EmotionSprite" type="Sprite" parent="."]

[node name="OverlaySprite" type="Sprite" parent="."]
